--- a/estetica/index.html
+++ b/estetica/index.html
@@ -7,22 +7,49 @@
 
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="../css/style.css" />
+  <script defer src="../home/js/main.js"></script>
+
 </head>
 
 <body class="bg-black text-white font-sans">
 
-  <!-- HEADER -->
-  <header class="w-full p-6 flex justify-between items-center border-b border-white/20">
+<header class="w-full p-6 flex justify-between items-center border-b border-white/20 relative">
+
+  <a href="../home/index.html">
     <h1 class="text-3xl font-bold tracking-wide">80s</h1>
-    <nav>
-      <ul class="flex gap-6 text-lg">
-        <li><a href="../home/index.html" class="hover:underline">Home</a></li>
-        <li><a href="../estetica/index.html" class="hover:underline">Estética</a></li>
-        <li><a href="../discografia/index.html" class="hover:underline">Discografía</a></li>
-        <li><a href="../publicidad/index.html" class="hover:underline">Publicidad</a></li>
-      </ul>
-    </nav>
-  </header>
+  </a>
+
+  <!-- NAV DESKTOP -->
+  <nav class="hidden md:flex">
+    <ul class="flex gap-6 text-lg">
+      <li><a href="../home/index.html" class="hover:underline">Home</a></li>
+      <li><a href="../galeria/index.html" class="hover:underline">Galería</a></li>
+      <li><a href="../discografia/index.html" class="hover:underline">Discografía</a></li>
+      <li><a href="../estetica/index.html" class="hover:underline">Estética</a></li>
+      <li><a href="../publicidad/index.html" class="hover:underline">Publicidad</a></li>
+      <li><a href="../top10/index.html" class="hover:underline">Top 10</a></li>
+      <li><a href="../8bits/index.html" class="hover:underline">8 Bits</a></li>
+    </ul>
+  </nav>
+
+  <!-- NAV MOBILE -->
+  <button id="navToggle" class="md:hidden text-3xl select-none">☰</button>
+
+  <nav id="navMenu"
+       class="hidden absolute top-full right-0 bg-black/90 border border-white/20
+              rounded-xl p-4 flex-col gap-4 text-lg md:hidden w-40 backdrop-blur-md">
+    <a href="../home/index.html" class="block hover:underline">Home</a>
+    <a href="../galeria/index.html" class="block hover:underline">Galería</a>
+    <a href="../discografia/index.html" class="block hover:underline">Discografía</a>
+    <a href="../estetica/index.html" class="block hover:underline">Estética</a>
+    <a href="../publicidad/index.html" class="block hover:underline">Publicidad</a>
+    <a href="../top10/index.html" class="block hover:underline">Top 10</a>
+    <a href="../8bits/index.html" class="block hover:underline">8 Bits</a>
+  </nav>
+
+</header>
+
+
 
   <!-- CONTENIDO -->
   <section class="p-10 max-w-4xl mx-auto">
