--- a/8bits/index.html
+++ b/8bits/index.html
@@ -84,7 +84,7 @@
   class="w-full rounded-xl mb-6 shadow-lg"
 />
 
-  <a href="./game/juego.html" target="_blank" class="inline-block bg-purple-600 hover:bg-purple-700 text-white py-3 px-6 rounded-xl text-lg font-bold transition">
+  <a href="game/juego.html" target="_blank" class="inline-block bg-purple-600 hover:bg-purple-700 text-white py-3 px-6 rounded-xl text-lg font-bold transition">
 
     🎮 JUGAR AHORA
   </a>
