--- a/index.html
+++ b/index.html
@@ -5,24 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Previa</title>
 
-  <link rel="stylesheet" href="final/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body class="bg-black h-screen flex flex-col justify-center items-center gap-6">
+<body class="inicio-screen">
 
-  <!-- Vinilo -->
-  <img 
-    src="home/img/disco.jpg"
-    alt="vinilo girando"
-    class="vinilo animate-spin-slow cursor-pointer"
-    id="vinilo"
-  >
-
-  <!-- Texto ENTRAR -->
-  <p class="text-white text-xl opacity-80 tracking-wider cursor-pointer" id="entrar">
-    ENTRAR
+  <p id="entrar"
+     class="inicio-entrar glitch cursor-pointer"
+     data-text="ENTRAR">
+     ENTRAR
   </p>
 
   <script src="home/js/entrar.js"></script>
 </body>
+
 </html>
