--- a/cyndi/index.html
+++ b/cyndi/index.html
@@ -93,8 +93,8 @@
     style="background-image: url('https://media.gettyimages.com/id/85847394/es/foto/cyndi-lauper-performing-at-a-wnew-christmas-concert-at-madison-square-garden-in-new-york-city-on.jpg?s=1024x1024&w=gi&k=20&c=H-_7WWl5jnK05szmdLaYWkmOULkU5KN45v3RdBKnc0Y=');">
     <div class="w-full p-10 bg-black/50 backdrop-blur-sm">
       <h2 class="text-5xl font-bold neon-text">Cyndi Lauper</h2>
-      <p class="opacity-90 text-lg">Una de las voces más icónicas de los 80, símbolo de libertad estética,
-      energía punk-pop y empoderamiento femenino.</p>
+      <p class="opacity-90 text-lg">Una variedad de colores de pelo, ropa extraterrestre y un poderoso rango vocal de cuatro octavas. Símbolo de libertad estética,
+      energía punk-pop y empoderamiento.</p>
     </div>
   </section>
 
@@ -121,7 +121,11 @@
       <span class="font-semibold">“Girls Just Want to Have Fun”</span>,
       transformó un tema originalmente compuesto por un hombre en un
       manifiesto de independencia y alegría de vivir.
-    </p>
+      Fue una especie de festivo canto de guerra. Un rugido inesperado 
+      y adelantado a su tiempo. Una invocación a disfrutar, al placer femenino. 
+      Un mensaje contrario a la época cantado por alguien que no se parecía a nadie. 
+      Las chicas sólo quieren divertirse gritaba desde las radios y desde MTV 
+      en plena época Reagan, en el reinado conservador. </p>
 
     <p>
       A lo largo de su carrera continuó experimentando con géneros, desde el pop
@@ -186,7 +190,7 @@
   <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
     <div class="neon-box rounded-xl overflow-hidden gallery-item">
       <img src="../cyndi/img/cinndy.jpeg" alt="Cyndi Lauper en los años 80" class="w-full h-64 object-cover" />
-      <div class="tooltip">Cyndi Lauper posando con su estilo colorido clásico.</div>
+      <div class="tooltip">Cyndi Lauper.</div>
     </div>
 
     <div class="neon-box rounded-xl overflow-hidden gallery-item">
