--- a/eurythmics/index.html
+++ b/eurythmics/index.html
@@ -91,7 +91,7 @@
     style="background-image: url('https://media.gettyimages.com/id/599356506/es/foto/annie-lennox-during-the-making-of-the-eurythmics-video-missionary-man.jpg?s=612x612&w=0&k=20&c=Aaih1LJJHOq22WVAmXqeQnsExg-EtRKVoDYlrma0a58=');">
     <div class="w-full p-10 bg-black/50 backdrop-blur-sm">
       <h2 class="text-5xl font-bold neon-text">Eurythmics</h2>
-      <p class="opacity-90 text-lg">Dúo británico icónico de los años 80, pionero en synth-pop y estética visual.</p>
+      <p class="opacity-90 text-lg">Dúo británico pionero en synth-pop y estética visual.</p>
     </div>
   </section>
 
