--- a/8bits/index.html
+++ b/8bits/index.html
@@ -36,8 +36,9 @@
 
         <!-- MENÚ DESPLEGABLE pegado al botón -->
         <ul id="artistasMenu"
-            class="absolute top-full left-0 mt-0 hidden bg-black/90 border border-white/20
-                   rounded-xl py-2 w-40 backdrop-blur-md z-50">
+     class="absolute top-full left-0 mt-0 hidden pointer-events-none bg-black/90 border border-white/20
+            rounded-xl py-2 w-40 backdrop-blur-md z-50">
+
 
           <li><a href="../kate/index.html" class="block px-4 py-2 hover:bg-white/10">Kate Bush</a></li>
           <li><a href="../cyndi/index.html" class="block px-4 py-2 hover:bg-white/10">Cyndi Lauper</a></li>
@@ -113,8 +114,8 @@
   <h2 class="text-3xl font-bold mb-4">Mini-juego 8-bit</h2>
 
   <p class="opacity-80 mb-6">
-    Te presentamos un pequeño juego inspirado en la estética de los videojuegos
-    de 8 bits de los años 80, donde podés controlar una nave y eliminar invasores pixelados.
+    Juego inspirado en la estética de los videojuegos de 8 bits de los años 80, 
+    donde podés controlar una nave y eliminar invasores pixelados.
     Pensado como homenaje a clásicos como Space Invaders y Galaga.
   </p>
 
@@ -124,12 +125,12 @@
   class="w-full rounded-xl mb-6 shadow-lg"
 />
 
-  <a href="game/juego.html" target="_blank" class="inline-block bg-purple-600 hover:bg-purple-700 text-white py-3 px-6 rounded-xl text-lg font-bold transition">
-
-    🎮 JUGAR AHORA
-  </a>
+<a href="./game/juego.html"
+   target="_blank"
+   class="inline-block bg-purple-600 hover:bg-purple-700 text-white py-3 px-6 rounded-xl text-lg font-bold transition">
+   🎮 JUGAR AHORA
+</a>
 </section>
-  </main>
 
   <!-- FOOTER -->
   <footer class="text-center p-6 opacity-70 text-sm border-t border-white/20">
