--- a/home/index.html
+++ b/home/index.html
@@ -94,22 +94,22 @@
     <!-- NUEVAS SECCIONES EXTRA -->
     <a href="../galeria/index.html" class="block neon-box p-6 rounded-2xl hover:scale-105 transition">
       <h3 class="text-2xl font-bold mb-2">Galería</h3>
-      <p class="opacity-80">Imágenes y estética visual</p>
+      <p class="opacity-80">Shock visual</p>
     </a>
 
     <a href="../discografia/index.html" class="block neon-box p-6 rounded-2xl hover:scale-105 transition">
       <h3 class="text-2xl font-bold mb-2">Discografía</h3>
-      <p class="opacity-80">Portadas y álbumes icónicos</p>
+      <p class="opacity-80">Portadas imperdibles y álbumes recomendados</p>
     </a>
 
     <a href="../estetica/index.html" class="block neon-box p-6 rounded-2xl hover:scale-105 transition">
       <h3 class="text-2xl font-bold mb-2">Estética 80s</h3>
-      <p class="opacity-80">Moda, colores y diseño retro</p>
+      <p class="opacity-80">Moda, colores y diseño</p>
     </a>
 
     <a href="../publicidad/index.html" class="block neon-box p-6 rounded-2xl hover:scale-105 transition">
       <h3 class="text-2xl font-bold mb-2">Publicidad 80s</h3>
-      <p class="opacity-80">Anuncios y gráfica vintage</p>
+      <p class="opacity-80">Anuncios y gráfica </p>
     </a>
 
     <a href="../top10/index.html" class="block neon-box p-6 rounded-2xl hover:scale-105 transition">
@@ -118,7 +118,7 @@
     </a>
   <a href="../8bits/index.html" class="block neon-box p-6 rounded-2xl hover:scale-105 transition">
       <h3 class="text-2xl font-bold mb-2">8 BITS</h3>
-      <p class="opacity-80">Sonidos clásicos del 8bit</p>
+      <p class="opacity-80">Sonoridad 8bits + Juego homenaje</p>
     </a>
   </section>
 
