--- a/kate/index.html
+++ b/kate/index.html
@@ -97,7 +97,7 @@
     style="background-image: url('https://media.gettyimages.com/id/88431075/es/foto/kate-bush-performs-on-stage-on-the-tour-of-life-carre-amsterdam-netherlands-29th-april-1979.jpg?s=1024x1024&w=gi&k=20&c=oDqzfLux88DFf5UOToWbiKRPdiiAQSwmTUSNqkZFM6E=');">
     <div class="w-full p-10 bg-black/50 backdrop-blur-sm">
       <h2 class="text-5xl font-bold neon-text">Kate Bush</h2>
-      <p class="opacity-90 text-lg">Fue la primera mujer en ser número 1 en el ranking europeo. Desde los 11 hasta hasta los 20 años compuso 120 canciones. Su música de un género inclasificable</p>
+      <p class="opacity-90 text-lg">Desde los 11 hasta hasta los 20 años compuso 120 canciones. Fue la primera mujer en ser número 1 en el ranking europeo. Su música es de un género inclasificable</p>
     </div>
   </section>
 
