--- a/estetica/index.html
+++ b/estetica/index.html
@@ -31,7 +31,7 @@
           Artistas ▼
         </button>
 
-        <!-- MENÚ DESPLEGABLE pegado al botón -->
+        <!-- MENÚ DESPLEGABLE-->
         <ul id="artistasMenu"
             class="absolute top-full left-0 mt-0 hidden bg-black/90 border border-white/20
                    rounded-xl py-2 w-40 backdrop-blur-md z-50">
@@ -89,36 +89,112 @@
 
 
   <!-- CONTENIDO -->
-  <section class="p-10 max-w-4xl mx-auto">
-    <h2 class="text-4xl neon-title font-bold mb-6 text-center">La estética del pop de los 80</h2>
+<section class="p-10 max-w-4xl mx-auto">
+  <h2 class="text-4xl neon-title font-bold mb-6 text-center">La estética del pop de los 80</h2>
 
-    <p class="opacity-90 mb-6 leading-relaxed">
-      La década del 80 fue una explosión de colores saturados, texturas metálicas,
-      neón omnipresente y un espíritu futurista influenciado por las primeras
-      tecnologías digitales. Videoclips, moda y diseño gráfico comenzaron a
-      mezclarse para construir una identidad estética reconocible en cualquier parte del mundo.
-    </p>
+  <p class="opacity-90 mb-6 leading-relaxed">
+    La década del 80 fue una explosión de colores saturados, texturas metálicas,
+    neón omnipresente y un espíritu futurista influenciado por las primeras
+    tecnologías digitales. Videoclips, moda y diseño gráfico comenzaron a
+    mezclarse para construir una identidad estética reconocible en cualquier parte del mundo.
+  </p>
 
-    <h3 class="text-2xl font-semibold mt-8 mb-3">Elementos claves</h3>
+  <h3 class="text-2xl font-semibold mt-8 mb-3">Elementos claves</h3>
 
-    <ul class="list-disc ml-6 space-y-2 opacity-90">
-      <li>Colores fluorescentes y contrastes extremos</li>
-      <li>Formas geométricas y patrones repetitivos</li>
-      <li>Influencias del arte pop, el punk y el vaporwave primitivo</li>
-      <li>Películas y TV como “Tron”, “Blade Runner” y “Miami Vice”</li>
-      <li>Primeros efectos digitales en videoclips</li>
-    </ul>
+  <ul class="list-disc ml-6 space-y-2 opacity-90">
+    <li>Colores fluorescentes y contrastes extremos</li>
+    <li>Formas geométricas y patrones repetitivos</li>
+    <li>Influencias del arte pop, el punk y el vaporwave primitivo</li>
+    <li>Películas como “Tron” y “Blade Runner”</li>
+    <li>Primeros efectos digitales en videoclips</li>
+  </ul>
+</section>
 
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mt-10">
-      <img src="https://media.gettyimages.com/id/542621654/es/foto/paris-based-american-designer-patrick-kelly-poses-with-his-models-in-paris-the-models-wear-his.jpg?s=1024x1024&w=gi&k=20&c=fVr6qIVezo8_snfhJ2l39VvvklVJknIqcu_l1do5JJU=" class="rounded-xl neon-box object-cover h-64" alt="Neón 80s">
-      <img src="https://media.gettyimages.com/id/960240660/es/foto/american-hip-hop-mc-kool-moe-dee-circa-1987.jpg?s=1024x1024&w=gi&k=20&c=MbPQBsXCWWF9TuSyc9fnZ6nFu-ok6BZwOiyZl-w75R8=" class="rounded-xl neon-box object-cover h-64" alt="Colores 80s">
-            <img src="https://media.gettyimages.com/id/1174266090/es/foto/vogue-january-1985-a-trio-of-models-left-to-right-ashley-richardson-daniela-ghione-and.jpg?s=1024x1024&w=gi&k=20&c=KxM0MQaSOZWjuAi6VuaAozmX883G3w-ViuBsPI9GRXA=" class="rounded-xl neon-box object-cover h-64" alt="Colores 80s">
-      <img src="https://media.gettyimages.com/id/1250096277/es/foto/bogner-mode-80er-jahre-fotoshooting-bogner-mode-80er-jahre-fotoshooting.jpg?s=1024x1024&w=gi&k=20&c=biUZYthiUhDOD2jNkwg71ijWqP2NffFVkTZd18YGDQQ=" class="rounded-xl neon-box object-cover h-64" alt="Colores 80s">
-      <img src="https://media.gettyimages.com/id/107980222/es/foto/american-singer-madonna-in-new-york-1984.jpg?s=612x612&w=0&k=20&c=X3YcXfCysf_qUpqnHe4v0IazMa9mQ429IkMANhxjqAQ=" class="rounded-xl neon-box object-cover h-64" alt="Colores 80s">
-      <img src="https://media.gettyimages.com/id/960240698/es/foto/american-hip-hop-trio-salt-n-pepa-and-friends-dancing-on-the-steps-of-the-soldiers-and-sailors.jpg?s=612x612&w=0&k=20&c=oUa-zPRJV81YZHDJoSrxRQRm3d2T5txUiO6oSn3egRY=" class="rounded-xl neon-box object-cover h-64" alt="Colores 80s">
 
+
+<!-- MODO EDITORIAL / MODA Y CULTURA -->
+<section class="max-w-4xl mx-auto px-6 md:px-10 mt-20 leading-relaxed">
+
+  <div class="w-full mb-10">
+    <img 
+      src="https://media.gettyimages.com/id/1174266090/es/foto/vogue-january-1985-a-trio-of-models-left-to-right-ashley-richardson-daniela-ghione-and.jpg?s=1024x1024&w=gi&k=20&c=KxM0MQaSOZWjuAi6VuaAozmX883G3w-ViuBsPI9GRXA=" 
+      class="rounded-xl neon-box w-full object-cover"
+    >
+  </div>
+
+  <h2 class="text-3xl font-bold neon-title mb-6 text-center">
+    Moda, cuerpo y futurismo pop
+  </h2>
+
+  <p class="opacity-90 mb-8 text-lg">
+    La moda de los años 80 fue una declaración cultural. Diseñadores, artistas y directores de videoclips
+    llevaron el cuerpo a un terreno performático donde tecnología, color y espectáculo se mezclaban.
+  </p>
+
+  <div class="md:flex items-center gap-8 mb-16">
+    <div class="md:w-1/2 mb-6 md:mb-0">
+      <h3 class="text-2xl font-semibold mb-4">Volúmenes y exceso</h3>
+      <p class="opacity-90">
+        Hombros exagerados, brillo, dramatismo. La moda abrazó tanto el glamour de pasarela como la
+        estética callejera del hip-hop.
+      </p>
     </div>
-  </section>
+    <div class="md:w-1/2">
+      <img 
+        src="https://media.gettyimages.com/id/960240660/es/foto/american-hip-hop-mc-kool-moe-dee-circa-1987.jpg?s=1024x1024&w=gi&k=20&c=MbPQBsXCWWF9TuSyc9fnZ6nFu-ok6BZwOiyZl-w75R8="
+        class="rounded-xl neon-box w-full object-cover"
+      >
+    </div>
+  </div>
+
+  <div class="md:flex items-center gap-8 mb-16 md:flex-row-reverse">
+    <div class="md:w-1/2 mb-6 md:mb-0">
+      <h3 class="text-2xl font-semibold mb-4">Energía, danza y videoclips</h3>
+      <p class="opacity-90">
+        La moda ochentosa nació en movimiento: cuerpos bailando en videoclips, pistas de baile
+        y escenarios televisivos. La ropa se diseñaba para lucir bien en cámara.
+      </p>
+    </div>
+
+    <div class="md:w-1/2">
+      <img 
+        src="https://media.gettyimages.com/id/960240698/es/foto/american-hip-hop-trio-salt-n-pepa-and-friends-dancing-on-the-steps-of-the-soldiers-and-sailors.jpg?s=612x612&w=0&k=20&c=oUa-zPRJV81YZHDJoSrxRQRm3d2T5txUiO6oSn3egRY="
+        class="rounded-xl neon-box w-full object-cover"
+      >
+    </div>
+  </div>
+
+  <p class="opacity-90 text-lg mt-10 text-center max-w-3xl mx-auto">
+    Hoy, la estética ochentosa sigue regresando en ciclos, recuperando colores saturados,
+    geometrías y un espíritu atrevido que no teme experimentar.
+  </p>
+</section>
+
+
+
+<!-- GALERÍA -->
+<section class="max-w-5xl mx-auto mt-20 px-6 md:px-10">
+
+  <h2 class="text-3xl font-bold text-center neon-title mb-10">Galería estética 80s</h2>
+
+  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8">
+
+    <img src="https://media.gettyimages.com/id/542621654/es/foto/paris-based-american-designer-patrick-kelly-poses-with-his-models-in-paris-the-models-wear-his.jpg?s=1024x1024&w=gi&k=20&c=fVr6qIVezo8_snfhJ2l39VvvklVJknIqcu_l1do5JJU=" class="rounded-xl neon-box object-cover h-64">
+
+    <img src="https://media.gettyimages.com/id/1174266090/es/foto/vogue-january-1985-a-trio-of-models-left-to-right-ashley-richardson-daniela-ghione-and.jpg?s=1024x1024&w=gi&k=20&c=KxM0MQaSOZWjuAi6VuaAozmX883G3w-ViuBsPI9GRXA=" class="rounded-xl neon-box object-cover h-64">
+
+    <img src="https://media.gettyimages.com/id/1250096277/es/foto/bogner-mode-80er-jahre-fotoshooting-bogner-mode-80er-jahre-fotoshooting.jpg?s=1024x1024&w=gi&k=20&c=biUZYthiUhDOD2jNkwg71ijWqP2NffFVkTZd18YGDQQ=" class="rounded-xl neon-box object-cover h-64">
+
+    <img src="https://media.gettyimages.com/id/107980222/es/foto/american-singer-madonna-in-new-york-1984.jpg?s=612x612&w=0&k=20&c=X3YcXfCysf_qUpqnHe4v0IazMa9mQ429IkMANhxjqAQ=" class="rounded-xl neon-box object-cover h-64">
+
+    <img src="https://media.gettyimages.com/id/960240660/es/foto/american-hip-hop-mc-kool-moe-dee-circa-1987.jpg?s=1024x1024&w=gi&k=20&c=MbPQBsXCWWF9TuSyc9fnZ6nFu-ok6BZwOiyZl-w75R8=" class="rounded-xl neon-box object-cover h-64">
+
+    <img src="https://media.gettyimages.com/id/960240698/es/foto/american-hip-hop-trio-salt-n-pepa-and-friends-dancing-on-the-steps-of-the-soldiers-and-sailors.jpg?s=612x612&w=0&k=20&c=oUa-zPRJV81YZHDJoSrxRQRm3d2T5txUiO6oSn3egRY=" class="rounded-xl neon-box object-cover h-64">
+
+  </div>
+
+</section>
+
 
   <!-- FOOTER -->
   <footer class="text-center p-6 opacity-70 text-sm border-t border-white/20">
