--- a/michael/index.html
+++ b/michael/index.html
@@ -8,6 +8,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="../css/style.css" />
   <script defer src="./js/michael.js"></script>
+  <script defer src="../home/js/main.js"></script>
 </head>
 
 <body class="bg-black text-white font-sans">
