modificaci'on nav

--- a/discografia/index.html
+++ b/discografia/index.html
@@ -33,7 +33,7 @@
         </button>
 
         <ul id="artistasMenu"
-            class="absolute top-full left-0 mt-2 hidden bg-black border border-white/30
+            class="absolute top-full left-0 mt-0 hidden bg-black border border-white/30
                    shadow-xl rounded-2xl py-3 w-48 z-50">
 
           <li><a href="../kate/index.html" class="block px-4 py-2 hover:bg-white/10">Kate Bush</a></li>
@@ -50,6 +50,8 @@
       <li><a href="../publicidad/index.html" class="hover:underline">Publicidad</a></li>
       <li><a href="../top10/index.html" class="hover:underline">Top 10</a></li>
       <li><a href="../8bits/index.html" class="hover:underline">8 Bits</a></li>
+      <li><a href="../contacto.html" class="block hover:underline">Contacto</a></li>
+
 
     </ul>
   </nav>
@@ -86,6 +88,8 @@
     <a href="../publicidad/index.html" class="block hover:underline">Publicidad</a>
     <a href="../top10/index.html" class="block hover:underline">Top 10</a>
     <a href="../8bits/index.html" class="block hover:underline">8 Bits</a>
+        <a href="../contacto/index.html" class="block underline">Contacto</a>
+
 
   </nav>
 
