--- a/home/index.html
+++ b/home/index.html
@@ -7,43 +7,89 @@
 
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="../css/style.css" />
-  <script defer src="/home/js/main.js"></script>
+  <script defer src="js/main.js"></script>
 </head>
 
 <body class="bg-black text-white font-sans">
 
 <header class="w-full p-6 flex justify-between items-center border-b border-white/20 relative">
-   
-  <a href="index.html">
+
+  <!-- LOGO -->
+  <a href="../home/index.html">
     <h1 class="text-3xl font-bold tracking-wide">80s</h1>
   </a>
 
   <!-- NAV DESKTOP -->
-  <nav class="hidden md:flex">
-    <ul class="flex gap-6 text-lg">
-      <li><a href="index.html" class="hover:underline">Home</a></li>
+  <nav class="hidden md:flex relative">
+    <ul class="flex gap-8 text-lg items-center">
+
+      <li><a href="../home/index.html" class="hover:underline">Home</a></li>
+
+      <!-- ARTISTAS DESKTOP -->
+      <li class="relative">
+        <button id="artistasBtn" class="hover:underline flex items-center gap-1">
+          Artistas ▼
+        </button>
+
+        <ul id="artistasMenu"
+            class="absolute top-full left-0 mt-0 hidden bg-black border border-white/30
+                   shadow-xl rounded-2xl py-3 w-48 z-50">
+
+          <li><a href="../kate/index.html" class="block px-4 py-2 hover:bg-white/10">Kate Bush</a></li>
+          <li><a href="../cyndi/index.html" class="block px-4 py-2 hover:bg-white/10">Cyndi Lauper</a></li>
+          <li><a href="../michael/index.html" class="block px-4 py-2 hover:bg-white/10">Michael Jackson</a></li>
+          <li><a href="../eurythmics/index.html" class="block px-4 py-2 hover:bg-white/10">Eurythmics</a></li>
+
+        </ul>
+      </li>
+
       <li><a href="../galeria/index.html" class="hover:underline">Galería</a></li>
       <li><a href="../discografia/index.html" class="hover:underline">Discografía</a></li>
       <li><a href="../estetica/index.html" class="hover:underline">Estética</a></li>
       <li><a href="../publicidad/index.html" class="hover:underline">Publicidad</a></li>
       <li><a href="../top10/index.html" class="hover:underline">Top 10</a></li>
       <li><a href="../8bits/index.html" class="hover:underline">8 Bits</a></li>
+                <li><a href="../contacto.html" class="block hover:underline">Contacto</a></li>
+
+
     </ul>
   </nav>
 
-  <!-- NAV MOBILE -->
+  <!-- NAV MOBILE TOGGLE -->
   <button id="navToggle" class="md:hidden text-3xl select-none">☰</button>
 
+  <!-- NAV MOBILE -->
   <nav id="navMenu"
-       class="hidden absolute top-full right-0 bg-black/90 border border-white/20
-              rounded-xl p-4 flex-col gap-4 text-lg md:hidden w-40 backdrop-blur-md">
-    <a href="index.html" class="block hover:underline">Home</a>
+       class="hidden absolute top-full right-4 bg-black border border-white/30 shadow-2xl
+              rounded-2xl p-5 flex-col gap-5 text-xl md:hidden w-56 z-50">
+
+    <a href="../home/index.html" class="block hover:underline">Home</a>
+
+    <!-- ARTISTAS MOBILE -->
+    <button id="artistasMobileBtn"
+            class="hover:underline text-left flex items-center justify-between">
+      Artistas <span>▼</span>
+    </button>
+
+    <div id="artistasMobileMenu"
+         class="hidden flex-col pl-4 gap-3 text-lg">
+
+      <a href="../kate/index.html" class="hover:underline">• Kate Bush</a>
+      <a href="../cyndi/index.html" class="hover:underline">• Cyndi Lauper</a>
+      <a href="../michael/index.html" class="hover:underline">• Michael Jackson</a>
+      <a href="../eurythmics/index.html" class="hover:underline">• Eurythmics</a>
+
+    </div>
+
     <a href="../galeria/index.html" class="block hover:underline">Galería</a>
     <a href="../discografia/index.html" class="block hover:underline">Discografía</a>
     <a href="../estetica/index.html" class="block hover:underline">Estética</a>
     <a href="../publicidad/index.html" class="block hover:underline">Publicidad</a>
     <a href="../top10/index.html" class="block hover:underline">Top 10</a>
     <a href="../8bits/index.html" class="block hover:underline">8 Bits</a>
+        <a href="../contacto/index.html" class="block underline">Contacto</a>
+
+
   </nav>
 
 </header>
