modificacion del about. Agregado de contenido

--- a/index.html
+++ b/index.html
@@ -3,13 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Previa</title>
+  <title>About</title>
 
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="inicio-screen">
 
+  <!-- BLOQUE ABOUT / INTRO -->
+  <div class="inicio-texto">
+  
+
+    <p class="inicio-descripcion">
+      Trabajo Final de Malen Ciardullo<br>
+      para la materia de Informática General<br>
+      de la carrera de Artes Multimediales – UNA
+    </p>
+  </div>
+
+  <!-- BOTÓN ENTRAR -->
   <p id="entrar"
      class="inicio-entrar glitch cursor-pointer"
      data-text="ENTRAR">
@@ -18,5 +30,4 @@
 
   <script src="home/js/entrar.js"></script>
 </body>
-
 </html>
