--- a/galeria/index.html
+++ b/galeria/index.html
@@ -96,54 +96,135 @@
 </header>
 
 
+<main class="max-w-5xl mx-auto p-10 space-y-20">
 
+  <!-- CABECERA EDITORIAL -->
+  <section class="space-y-8">
 
-  <main class="max-w-5xl mx-auto p-10 space-y-10">
+    <div class="flex items-center gap-6">
+      <img src="./img/img8.jpg"
+           class="w-24 h-24 object-cover rounded-xl shadow-lg" />
 
-<div class="flex items-center gap-4 mb-6">
-  <img 
-    src="./img/img8.jpg" 
-    class="w-20 h-20 object-cover rounded-lg shadow-md"
-  />
-  <h2 class="text-4xl font-bold">Galería visual estilo 80s</h2>
-</div>
+      <div>
+        <h2 class="text-5xl font-black uppercase tracking-wide leading-none">
+          Estética visual de los 80s
+        </h2>
+        <span class="block text-xs tracking-widest uppercase opacity-60 mt-2">
+          Cultura visual · Música · Diseño
+        </span>
+      </div>
+    </div>
 
-
-    <p class="opacity-80 mb-6">
-      Colección de imágenes icónicas de cultura pop, estética VHS, colores neón,
-      texturas retro y elementos característicos de la década.
+    <p class="max-w-2xl text-lg leading-relaxed opacity-80">
+      Una exploración visual de los códigos estéticos que definieron la cultura pop de los
+      años ochenta: el VHS, las tipografías expresivas y la fusión entre
+      música, diseño y tecnología. <br>
+      <strong> <u> Algunos posters clásicos de la época: </u></strong>
     </p>
 
-    <div class="grid sm:grid-cols-2 md:grid-cols-3 gap-6">
-                 <img src="./img/img14.jpg" class="rounded-xl hover:scale-105 transition" />
-           <img src="./img/img15.jpg" class="rounded-xl hover:scale-105 transition" />
-           <img src="./img/img16.jpg" class="rounded-xl hover:scale-105 transition" />
-
-        
-     <img src="./img/img9.jpg" class="rounded-xl hover:scale-105 transition" />
-     <img src="./img/img10.jpg" class="rounded-xl hover:scale-105 transition" />
-          <img src="./img/img11.jpg" class="rounded-xl hover:scale-105 transition" />
-      <img src="./img/img1.webp" class="rounded-xl hover:scale-105 transition" />
-      <img src="./img/img2.jpeg" class="rounded-xl hover:scale-105 transition" />
-      <img src="./img/img3.jpg" class="rounded-xl hover:scale-105 transition" />
-      <img src="./img/img4.webp" class="rounded-xl hover:scale-105 transition" />
-      <img src="./img/img12.webp" class="rounded-xl hover:scale-105 transition" />
-         <img src="./img/img13.jpg" class="rounded-xl hover:scale-105 transition" />
-            <img src="./img/img5.jpg" class="rounded-xl hover:scale-105 transition" />
-     <img src="./img/img6.jpg" class="rounded-xl hover:scale-105 transition" />
-          <img src="./img/img8.jpg" class="rounded-xl hover:scale-105 transition" />
+  </section>
 
 
+  <!-- PRIMER BLOQUE DE IMÁGENES -->
+  <section class="grid sm:grid-cols-2 md:grid-cols-3 gap-6">
 
+    <img src="./img/img14.jpg" class="rounded-2xl hover:scale-105 transition" />
+    <img src="./img/img15.jpg" class="rounded-2xl hover:scale-105 transition" />
+    <img src="./img/img16.jpg" class="rounded-2xl hover:scale-105 transition" />
+
+    <img src="./img/img9.jpg" class="rounded-2xl hover:scale-105 transition" />
+    <img src="./img/img10.jpg" class="rounded-2xl hover:scale-105 transition" />
+    <img src="./img/img11.jpg" class="rounded-2xl hover:scale-105 transition" />
+
+  </section>
+
+
+ <!-- BLOQUE MEMPHIS – ESTILO MAGAZINE VISUAL -->
+<section class="mt-24 mb-24 space-y-12">
+
+  <!-- TÍTULO GRANDE TIPO PORTADA -->
+  <div class="text-center space-y-4">
+    <h3 class="text-5xl md:text-6xl font-black uppercase tracking-widest leading-none">
+   
+      Grupo Memphis
+    </h3>
+    <p class="text-sm uppercase tracking-[0.4em] opacity-60">
+      Diseño radical · Cultura pop · Geometría
+    </p>
+  </div>
+
+  <!-- TEXTO TIPO NOTA DE REVISTA -->
+  <div class="max-w-3xl mx-auto text-center text-lg leading-relaxed opacity-90">
+    <p>
+      El Grupo Memphis fue un colectivo de diseñadores italianos que en los años ochenta
+      rompió con la sobriedad del diseño moderno. Su estilo se caracterizó por el uso de
+      colores intensos, patrones geométricos, formas asimétricas y una actitud lúdica
+      frente a los objetos y el espacio.
+    </p>
+  </div>
+
+  <!-- BLOQUE VISUAL -->
+  <div class="grid md:grid-cols-3 gap-6 items-center max-w-5xl mx-auto">
+
+    <!-- TEXTO LATERAL -->
+    <div class="space-y-6 text-base leading-relaxed opacity-80">
+
+      <p>
+        Sus referencias provenían del pop art, el diseño gráfico experimental, los
+        videojuegos, los videoclips musicales y la cultura urbana de la época.
+      </p>
+
+      <p>
+        Esta estética influyó directamente en la moda, la publicidad, el packaging y la
+        identidad visual de múltiples marcas durante la década.
+      </p>
 
     </div>
 
-  </main>
+    <!-- IMÁGENES GRANDES -->
+    <div class="md:col-span-2 grid grid-cols-2 gap-4">
 
-  <!-- FOOTER -->
-  <footer class="text-center p-6 opacity-70 text-sm border-t border-white/20">
-    Proyecto para Informática 1 – Artes Multimediales
-  </footer>
+      <img src="./img/memphis1.jpg"
+           class="w-full h-48 object-cover rounded-2xl hover:scale-105 transition" />
+
+      <img src="./img/memphis2.jpg"
+           class="w-full h-48 object-cover rounded-2xl hover:scale-105 transition" />
+
+      <img src="./img/memphis3.jpg"
+           class="w-full h-48 object-cover rounded-2xl hover:scale-105 transition" />
+
+      <img src="./img/memphis4.jpg"
+           class="w-full h-48 object-cover rounded-2xl hover:scale-105 transition" />
+
+    </div>
+  </div>
+
+</section>
+
+
+
+  
+<!-- SEGUNDO BLOQUE DE IMÁGENES – FORMATO VERTICAL GRANDE -->
+<section class="flex flex-col gap-12 max-w-3xl mx-auto">
+
+   <img src="./img/img1.jpg" class="w-full rounded-2xl shadow-xl" />
+<img src="./img/img2.jpg" class="w-full rounded-2xl shadow-xl" />
+<img src="./img/img3.jpg" class="w-full rounded-2xl shadow-xl" />
+<img src="./img/img4.jpg" class="w-full rounded-2xl shadow-xl" />
+<img src="./img/img5.jpg" class="w-full rounded-2xl shadow-xl" />
+<img src="./img/img7.jpg" class="w-full rounded-2xl shadow-xl" />
+<img src="./img/img8.jpg" class="w-full rounded-2xl shadow-xl" />
+
+ 
+
+  </section>
+
+</main>
+
+
+<footer class="text-center p-6 opacity-70 text-sm border-t border-white/20">
+  Proyecto para Informática 1 – Artes Multimediales
+</footer>
 
 </body>
 </html>
