--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <p class="inicio-descripcion">
       Trabajo Final de Malen Ciardullo<br>
       para la materia de Informática General<br>
-      de la carrera de Artes Multimediales – UNA
+      de la carrera de Artes Multimediales – UNIVERSIDAD NACIONAL DE LAS ARTES
     </p>
   </div>
 
